package com.swift.birdsofafeather;


import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;

import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import androidx.test.espresso.ViewInteraction;
import androidx.test.filters.LargeTest;
import androidx.test.rule.ActivityTestRule;
import androidx.test.runner.AndroidJUnit4;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class PhotoUploadSuccess {

    @Rule
    public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<>(MainActivity.class);

    @Test
    public void photoUploadSuccess() {
        ViewInteraction materialButton = onView(
                allOf(withId(R.id.savePhotoButton), withText("uploadPhotoPage"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                1),
                        isDisplayed()));
        materialButton.perform(click());

        ViewInteraction appCompatEditText = onView(
                allOf(withId(R.id.photoUploadURL),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                4),
                        isDisplayed()));
        appCompatEditText.perform(replaceText("data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wCEAAkGBxQUExYTFBQXFxYYGh4bGBgZGSMeHhsZHxsbHhsfGxsbHikhHhsmHBgZIzIiJiosLzAvGSA1OjUuOSkuLywBCgoKDg0OGxAQHDQmISYxLjAuNDEwLjAuLjcwLi4uLi4uLi4uLi4uLi4vLi4uLi4uLjAuLi4uLi4uLi4uLi4uLv/AABEIAMIBAwMBIgACEQEDEQH/xAAcAAABBQEBAQAAAAAAAAAAAAAEAgMFBgcAAQj/xAA/EAACAQMCAwYEAwgBAgYDAAABAhEAAyESMQQFQQYTIlFhcTKBkaFCsfAHFCNSYsHR4fEVchYkM1OCkheisv/EABoBAAIDAQEAAAAAAAAAAAAAAAMEAQIFBgD/xAAxEQABBAEDAgQFBAIDAQAAAAABAAIDEQQSITEFQRMiUWEUMpGh8BVxgbHB0VLh8SP/2gAMAwEAAhEDEQA/ALSlteob5U4lsTgn54rwNTqEev0roHWs4JxS6nrTp4m4dqZ1dJxShQqHcKwKfXiro/ERTg4u4d8/Khlxn9flTiXD8vYUMtHorAlP98Y2NOqdW/3imA48h+vnXqsPX61UhTaINsenyH+qRj1+leJHm1PKgO5I+dU4Vk2oB/EK8a3PWlyBsTPypWqetesryQlg+v2p61pByD8/+KR/8hSh7g/OqndSE8Cs4H/7Usv6D/7f7ocMPavR7n6UMtVrRGr0pVlhvH1NCm3+iK8Py+le0gr1oq6050/evA36mmQ/TVXFT0b+1RVL1oggHpSGT3+lMDV5mvQx6ifnU6aXrSyPMn6V5Hl+VILz0b616unyP0qQF60m7O29MlB5fn/an+8H4S30ru+Pn9qsCVUpgMn6Jr3Wvn+dc93zIpBYelXpQnlfyP3p8cRcjwg0EGHmfrXneD1qCy17Ul3WcZMj50hbx8z9aSzep+1Ms/8AVHy/3Vg0KpKK/ej511Bav6hXVbQFFqJ4XjkYSQeuk+YEZ64z6H0pfE38aVXUDgkPBGdJjHxCdsVX+Q3bqu9u6HREAMs2lVlgVAwCSSImdppHNLt9P4ttbiSXDKg8U7lsLBXbxddpriv1TN16df2FLWOPDo16SrIvH2w0QxmANRA6gTkyZkx6rRtribDMUGskbnTAG3yIyMzGDWa8q56e/U3Gi2QVPhCALJOQNiWiT6k1Yf8AxDa0qDetpp/9RQxbSIIHdOBk9fn6VaTqPUGGg6/4VY48d4PalaLd4FSVQnO4IIMRODHWRv0ruIvaQDEmYyYBJMKPMdP9VQ7fbQknTlVWAjDLsRBdiMdNh51LXOIAFwBxrW3rclDo0tpLlRqg4/1Qj1HqDSNTvsrNjx3g6RwrW3FW/wAMkt8OYiB49xmNxtNKPFKABoLNHQ7nbouNj7TVKsdq1Ic94AqlsH4mXSSrJv4tR29q85R2k75wDbeSNUB4EopICKBhmIyJg1R+b1E2dVV+ys1mNsPVXazzC3MMuTsocTvB6ecCknm9jvBbCkkgwJOSGg5gCAarfN2uFZS0XUHWyaQptygMAgyXDeIkCRQHB9piLYN0ukOG73uywuKIlSY+L1HlXmZ+cW2H3+fsofHCHaaV3HMk0g91qDECVuEjrPTpA+teDmiAkNZKriGL7ggZgDADGJ2x8qzJO2pzctqveZVc+EITKyoGXG3zqQ5b2utqni1rBMqFmdXUMxwVJJiIq7srqAHzf0qg4xNUr/w/MUZiAogAiQ0+PyzH2pu7zKCegGTjYZxkeYOfSqY/adG0P4iguKrF4JZQrAsFXZmDGc0ab/D8SgQMraYDlWFvQoB8elswoMR6+1CObnCg5xr9gr6YTegC1N3Oc6l8DIoaNL5aJMbRpmB1PXak8Px11yCDG+6wTkH4esCRPr7Vn/IuL7u8MsVOoPAxEHSSoyVBz7VbLDqqsVkudOoJKBrqRARSNXiDDYRA6VTIyMkbF5PovQ6HCy0BS9vm1zqoZZPjVsCMFYgHcHOd+tJ4rm5RXePCgyA0mSB1EYE+XWcVF2rt0q4vWbhcQAqNAZWYnUAPxKQBInptQU2rIu2nLGWbLISXDKBhxt4hk1VuXknYvP8ACu5sYGqvqrInHtAdRLMBCsxK9I0mQsy28Z+VC8y7QOqSugAtCsQTAzMjrHoMRmq7yLmtm2e7jQzEGZ8P9KljkKTg4xRHDWrKX1K6FfQo0C4AiFiQ5V9yQoBgH8VFGXlMcQXFCAie0EAe6n7PaZL0C1pTbxbgk/CNJjqSd/w+tGDm5WGKagQPCDsepUxBX4j1MAeeKfxFpLaG7aFwXGZ2yBOD1iITJgRmPSpDk7vcspc1amgxqI8ULoy28E4HuaHJmZF6w8q8bWWWkbqx2udSxQ2/KDM9BIgDOZg42p+7zS2rKNFwz5GYzBwJ6Gao93mtzWbndXFW2GUs2YuMfCCAACqNsPWjbvMw1p37u5p3BaE8ME6kggEBlBnJ8W1EGfmtrzf0oDIXXsrDxXP7KsqaSCRJBYfD5iN8n86eHNFIEW2JM7HAIJjJAxgyftVH5ZF9BduNqcErOPANIbUwO4kDGMjzNTiNbKlDpgqdEN4rix1LfCZJEetTJ1XLbtq377BS2CJwuvujG58gMshVZIyZIgmSQBtgekTXlvn6EwLTkHVBEGYiOsCd8xgioXgNDXuIUarhAkCZldJBVSMYJjOMT0p+zxAt/wAFiABcFu2Y1EsFAlh+EqwBkb1d3VsoWA7fb0UMx43dlPDmC5m2wIiBg6skECCciM0i3zuxqKszWzA+JRuSRHhJzt9RVV4znUPoYBGMLqiSpzJIYaCCSYI8xNN8y49VsJcZNZW4hcAqSTDwy6cTj2xFFi6rmitRBtDMUJuu3KvVzjrQyboAgmSDEDcycUzc4i2J/iifLScwQDuIiSBO1ZwnapzJKhVJJ3k7YDAQDJyc9TTvAoXQXDcui22tgAfAuj+dvwkttHpTH6nmNHmr6KjY4Hmm2Vf/AN7tje8n5/kK6qXwXLrdxBca8qs0kgvkZO/irqr+s5HqPop+GZ6fdF8s5hYZmuTpt210FbgwCX1SSZ3zE7U1w3Mg124NfiKd6BZfJZCQFU+RWDp8xVEv8Zda3pa5KEzpyRJM7e5NDWb5K62BV0ysSDjrIpQYI3N+y87N3FDZTnbHgkBW6oKLeBfQRDIZAIgZg4j50odkz+7rd13FfQ1zSy40rMKW84zHrU5wFwtw1u/atd/eYxdZhqZSDgZkjYfnRfPL2nvQWuO962P4MSELQJ1bbjAHnQ/iHtpg7H8/9Kv8OwtMh7jYKK7N8ps3LKzbF1ixFx9WnuV6aRtEb75FE8Fy7vrAsi/cZGZ11Y7tVQ+EMN4Mqd+tRnZjgUvWrii2jXu8Gpbnh/hED4DsMzNSXZDlyG7xVkuXsnTpBJAJVjlfPGD7etendp1OLuN+Pz1VoWjYEDcUkcr7MW2nXrFySrAEeBQJDFWyytmDUBxX8K8Vdiqh8sFAIEiTvMjOfOrrzDlKu6mzc0dyhU9XkfCBGSTn7VTLHDPc4hV3f4SDAOpjBkmox5dduJ2r6JbIjEZDdO/9q68y4xLNprqrbCof/LsHnWziGJEyzDcyOlVfjO0GvhTaCuHNsWYmUAH4gBkPj03JprmPIu7k94t1FaHjwi22YnqZPUfy+tRQsGHOtsCVMgDG+rOBHlRoImVd33Xpp36qIrZD80LMlspJ0rpJXGR0Ockb4Aq4sbD8KM2SgtJAx3guyNWqIO+r02pvsTwXD3rYe4o1oxIBZoAiA0AjEz9cUHz7lptlWRFS0wgCTI04OSMq24nMN6VMkjZHeHwWlSA5kZfsbRvJezC3LSu+kq2f4bS0CSBP8xOIIG9FcL2ft279u/b1CFL9zcy4iRKzAMfFBE+Go3lCu9u4iqw0qriMAwyzEGYMjbIjFFcJzwqDbZJugMEuOSSFYTH9Ryc+tLvEpLqP8exVo5I2tFivdWrmPdWbXeuFdgB44AZiMAkjefXoSM0PyLnKX7ml7Wm4gkSMwQAYI9IFO2b9ni7PcltJgDfIYfDBPxHE9a95RyO1whLtc1M2AYjEjYAk7x9qyjWhwfevstNj4y2xVKG446L1i3bt3XS1dYsfiL6gCyiMbCYJzFFcfwr8Tw76LqXCz6rTHwgbyonqcCBUjzZ7yMq8NbUuxLMxAAA9fKSB8xTfHW0Xh7dy+hTQ2rQhGXJkjyzk0YS7MIG/1PruEPw/K7UbBVL5XyG9cNzwQUYozO2kB/5VM5P+qAZQlwq6GQYE+YMHYeu9Wu9zixdDC8HQC5rBT1xDevSaguKttxl+66ys6RbU/EBGPLfRv0JFaccjnEl4oLMkgYWjwzumeF5lDqS7RqUH1AORk7xIirzYk2i102tBYd2FQkBfiXAj3j3qA4Xs3dtNad0GlXtkhYYkgjp5kEjFSvaS07mDxEHXqREJDlTspAiMRv196VndG9wDT/KZxdUbTq+6juP40KW4e6rvcDNBQ+BmdgwYrEiMEDPUUVx/MLZ0Wnt+JrlotbIwFXcrMALplYGc0ZyPk7AvxL6TdMwh6OMGT57AeVe8bwbcVYlrQS8jaQTPwxkDEnfbzoZlYHgdhyfc/wCFcMkLS76D2SbXE2Ym5+7kqXDjSAyrHhVRHxdD5edQZ4kX7qSlpQoYi27mGYxgnGcDBgYqQ5b2SYf+rbX4w0B4IyJ9CCvTqad55yxroS2TZS5rIXp/DjAGkHr5+VWa+IPIDr9/ReLZXt1UBXb1TAVLSXblm0bisyoFRjGoBTAIE6J1fYVKvxLC4sKqs2smBgHQCneHMNqJE4n7VV+ScHxau9m0biNr8cEQsAATIIip7tNyC/dtW1t3ArDN06oDGNyQMmfSqyhgeGucN+/8d0THdqbsKQXaPldy4VdrqG5bskssmWyTI6QAfOoLknENPdltagMEQqGh26hTg4kemqrZzDj7XC20s3ZdyhBIyYIg/KlBuFt2RdW0pBhoG4XAxOY8Ix71LMlzWaS0kHjZUmxC5+phr1We8w4K6CdVtkDE6QykDHkPpjP2o/sxyW5eVmukrbDxpDEajvJ1YUZAnck4q19qOHF02rKMFFwm5JmIgCABkTPQ9aI4/ibXCWAqQBM+bFpmcjOfpijuzXOiAaPM5UixP/qe4CX/ANM8rxtDpbFtSF9jGfP511Vz/wDIB6qD6kDNdSng5np/S0baqlxqMhNphkNuJiCIkTuMDNA8LeAILl/I48MeXtT73XeWdnfIyWkyPP8AxQHEIAy7yIA2Iwdsn1rpmN7Fcya1UFN8oe7J7u/oYkBVUlZMwJMgDG1aWl9eCs2lPjYiCVyzNuTO5zH0rIuFvMG1SrQciBk9BjB22rWOCv2eLS04b+JaIZhEAbahp/lzHyrI6pGRpLh5e9fZanT3CyDz2R3NuVWr6HXpW4y4dYnbGT026dKG7KcC9hHtuysHbwFCT0zIOF2mfX0oDtzfuL3egnSSQxXp5CajuzfaDuSUv3PCY0yYKyfxHygz8qzY4pX45o2D27px4iY7UdiiOV8m4izxSwk2wxm4DuhP4upPyqD7TXX4bjTcC2wVOpQgPngnG5wY9al+e9obzBrVlpBJBIAyoP4TPXzHnQKcQbp/8wAGKyHI8QOJDAHIkmNq0IBJeuQCqojulMmWOQU07hN815wLtoqlnu3vXAXhp+A40jzJM/OpXgezCC0zX9SXNLBZGmSUxIbcq2cGM9KrXD2Lg4i3bVky40uDGnTBJMx0zn5VZ+3F5xcTxt3bDUsRltjB9iKtLbS1jDV2VTHZ4pLn79kynZy7YuWbquGtof4hkCQQQQvVsH6jFSj8hPEXXdj/AAl0qsz4hoHiVoiJGQPXqKb7Fcy8N03HARIyxiDnr7VKctva+DY2dRBL6dRBLHUZ2+f2pGaaUE3yKF/vumfhmAhnY7pFnlnDaTbtNDHBeZYrq8Q9cSKqXaTk9yzdHiAQ/C27MBgDaAYiaZ4G4/eDSW1zn0jz8tqnO3XEWjw6MxYXJhYBIOVLwQY6D1o0HiRTAE2Hfn0QsyKPw/LyFWbXEEONODO+xHTB9qfvcU7M3eOcEhS5xnJj5zsKiUYt8JG++kn364NGcRdPi3zOfTPTzz9q1DCNVrHDiBVq68Pxlw8ILlvBBAYL4iB1Inz+UTUlwSNxHD6bpIlhBIiQDvjzEiaovZrmfEWXK2kZwRlCsgxicSRmP1teb/F3v3TvSmm4ROnqoJ8h5D51h5cLo3+Wudj3W9jSCVgBQdjs4bLOwJvWoIFqSIDNnGdTRs3p8685B2fazeFwnw+MaSds+GPMROfaveyfMrlx2VmLjTMn8Jkf7xQF7ml5OIIFzWuqIIjMwQACZ9/WoLp3Wyxdbq5hjaQT24Uqlm5wxu3bt0FWnSCSRqyVJHToMelA8hT95i84Opbm64nGWknMSMdBQ/aTnWm6ug6vCQbbJgGQZM7yMfKiOR8/DnTcPdFY0qqwhEZk+WKnRIItdbn7fwhGZj5NJ7JztvzlrSqiYZpyegFB9iee3HfunbViVIz+hU5z3k1vikWW0sMqwjr6dZ8qb7M9mU4bU+ou5xMQAPID9bUFssAxiw/N+d07ZvbhEcfxV1L66QChALe0gSPIyQI60L2iu2LV23cuBy0eFUEiRsTt1Mb0nm/amzZfQSJG48s/8UWly3ftByQd2VgJ0mMGOpHl5gUNgLNLntIHG3dUe12k6eUP2e4oNw739A7062cfikSQDB8oj0oDs/zW7du6XOtXklY+EjII+YqL4Tny8JeKhLps6SCGHiLk4aMAAiTG+1SvEc0sraY8Ig13BAfYAkx1zg9BTkkBDj5fm4Pp/pBglBbpPKN5xy6xxCi7dE6OtuZgHIIid5xFRvFdoeCKC0FYonwqBAMbdcrQJ5qLHDvaNzXcIOQepmZJ/RqpXLDOWNsMWC6io6KBJIxgCM0bHxNYOtxoHbekHJyi0hsfdXPkvOu/4o3Ce78IUAMANPWSw89OBHTNL7ecmu3ArWwX07qN+nT5VWOzzC1eTvy9vS8eqsOjHYbH2q/c07Q2+HuraYY0ahHX4tvUx96pksfFO0xC6H8fVXw3ksdrWZf9G4n/ANm7/wDSurUrPPNShlQwfz6/ea6r/qM3/AfVM+G1Yg3G4HhACyd8n3PWK9tcXJkY64GDG3p/xT3E8pGsoxUsDBKTBI8tRMj5UNe4U2sbrOD5ehFdGNB4XNlzSfdM8Girlp2nw/3qRS64hlDycgqY64z7jaoh7sERucU+BpUHUzRsJx6V5zb5VrPK0blXbG5bTTeQXNguYgdZ8zVc5rzFHN3uSArkagRJBgYEDIzviIqDs8NdunUsqv8AMTH0896l0vIiaQ4uOPUaiT+jSjcRkTi5o3P0VpMh7gGndOvxf8PT4iYGZjPXI9Zpy1fJQkOB5Scz+hUba4pWCs4IBaIBiDOxBGakb3CIy+EaM7jr5yNiPXFSYx3SrjpSOH4TvPGzazMkGIkdDOeoqe4Dn9tCyXx3zGAqjxaU6jJ9/pUTy6ywIBMp6e8j1ND8DwaoxIGpjk9NXzPv9qpIxjwWuH7I0eQYzqCs3F9sOGW2bNuzCtuGAUCQcnz2FRnZPm/7sWKuHDCNDbLmTpIPXrUbxXCi4w1KPCJK9dhk9SI+VE8ByJrilrVvwrMnpgFjvOYH3oJhhZGWHvzaYOVLK4Ec+yb59zi5cvs2qJjTBC49vLHvXHjbnEIi3HP8PwqCNh1Y7TSb/BCQjiGJBAK+efuOvtQ/E3Wt6lZNNsRoK7tO4+UTPTFHbGKAaOEFz3Ov17p88KmMif5gPyzXnBq1y+ti3BdzABxnJ32oLiOIVwQNQB6yNvSBtUr2IvovHWtTREgEmBqOFGAcmT5e9TISI3O7gFRA0OcAVpfLeV2+ERrhYyVXVqIIUgZ0mBgz5V7wfaW1cbSGjykETTHbZSbIImAwLR5f4qmpcZyqqBJICkefSubZD8Q0yPO/9LoWgRgNaNlofFzaXVZtKSzQQMbz4jHQHNMcNytVe5/CRS2RcwQTncbg5z5yalLNohVEwQOhwfemOL4gICSYApHxnDYc/wAogbqNKkcP2bvte8bKp7uSIkDUxATO+0yaD53y4q7DvVYgw2wK6cqFEj8MfOrLf7RIWMNG1Ku8r4fiId7akmCWAgk/925G3rWozLka7VKKFdgl5MLy+XlUniO0V5bixdjSZSV0rMR8InpImtL5Xxoe2iyNZUEgeWM/EYHuc1lfajhl7+4lhdFsQCIPxR4ioJwJiMdJ61Kdi+dDhwyMDBiOmcwCT0z0pvMxWywB8Y35SUE/hSFrymeacpv2r9wd2za2MELq1A7Z6Grl2T4RuHs93cmTLQMwD5DBPyzTlztZw4DyxIWcqJJgdBvJMx7VG865ncvELw5lca3IhFkBjDnbwicZGM0o8zTtEb26R3P7J50zaJZuVB8x5U93jWtWNLI/iJDEi2I8WsnM+hM+Ib1U+PtOuXJUSdJaQCV8p33+9aPyTjUW4bNstdYyWuGIbaQ0Tgem85qO/avw6G1alS10+FNJEIoyfCPFnaTIHuafx8g+M2Fw7c/5Sr8cBhfwoDs7yj95Vit1JtwApgkyDnGavvZTlXcLcCnUDBGoQZiGAxsfOmOw3FWrnDhETQbcAl0QSY6aNxvk586kudc+Sx4AJc/gGw+m1IZuRK+R0LAjY+OwAP7+qc4vlCXDcBTFxluM05LKsACRjA+5qE7acqDW7dxUJNqZZnyE3MkmT1qS5Hz3vmNt10vExOCPn1qF/aio7hcsS3hCLAEfiMnrECJoWKZviWxvKLO1ojJCpX/il1wrXYG2k4+XpXVC/wDTk6zXV03hQ+n2WR4h9SrZzFLaWv3jvSi3CAitZJ8YnX/ETAGfKoLvBqCsMMJDLsQB8UxI28gc1cm5CyWL1q/puIqM9qWghwNgScbE5naqTwvFW9I0amG2loxtGQNvSKHjSNe0kb13/pTmwNjdYCLK8Mq+G0rN0md+sk5qE429pIxnpAGPpRvFcbDGFURjz6dYxQ55tpGWz5Af6ppgcTukGBwPqo5+MuvhyYOwz9RFPcv5cWaWwAN/P2HWk8RzUM4IkEbN1B+VNWubFXn4h1nrTDg6vKEwQ8jyilPskkeE6UKspJmSJx5xt9KDutc1CbjGM5OM+mwoi3zC2wHi3O3WfWg+FvFnloA1REb+/tilxr7oPnok9kZwnHXkaWEqd5MkjbHrBNOPzVlvG0B4ehJjETPtmiL3ErbB/E3X/f8AqoW8xuMlwiIBkDzBwPYyPpXmgONkLzAHjcLROyV0d8NaagMo6klkImYECVjBqes884Wxca0mkB2ZmC+IKxgECMQdMwP5oobs5wbnl6Nb0i6VLaoIOTMTM6SfYHoIqnWuTX0Itm23kPCZJrCkEc8jw51VtV/dbeJD4bAObVs5py1uIuniCQlveB4naAABpAgEid9sVn3apri3FSCDpJCRnJ3+gH0rZ+R2zZsL3pgqviM4HzrPP2gKL3EB7V0QF8JVUIJO8uh1MMRDbRVumZRMpaeG8FAzMdkfntUezav6DCH0MiR8iaM7Ph9TE2zqESxjwnfY+wqZ4LhLl5raadJYhTPwhiYEnoKsfJez10HibdwMLiIGtgHDHxbGMgnTn8q0pcxoBDq/DSSja9+wCleS9rbRVbV1HBg63bxAkCfck+2KlrnNeEtMAujW06RbElmEHSNOZOoVDLyi4nLrrMAbxUXFXqukAhZ3LETPvUHxXZS9YtjizcKXFU95B8XjaAqxhSFOT6wKxBBjyOPmrcjY8lazJJWNAcFp1piVBKlJE6WgEehgxNUjtvx5Di2DsJicEnAn2qzdn+ItvYt92QAVGCRqONyFJzUb2r7Od/4kMON84I6exrOx/DiyfPsBaejdYWc6mWSGnzBzPX5fKrl2O4nWCJJUQR5j/VRJ7LcSTGhR0LVbuzvJRw6ROY8XlA6itPOniMVA2VZmocoDtQLNwNqvLZukAarttpZQZ0qxGBPlNZu14k5PhmN+kE9flWy81uqU0EWrmra3cMBx/Sdp9qx7juHtG4YUqNRIWdQAzgN1pnpcmqOiDt+eyxc9jQ+0Vw1vWy+LcjOwI6kmtHt8rW7wq2VuymqCwHxEfhEwSAQBP9NZtwVvuwx6QCnocjPpB+1SCc9uotpUOoWm1BTiTkiY8ixPSetEyYHykBhqihYuQ2JxtX2zyu3w9tikBwpMkAkxnYkfQEb1m3MubHiXlrhuFZ07rCkzhTEDbz2oXtFzfiOICW7twjQZAAjpvM5GenkKibXBXdQO/rIB+lExMIxAukdbj+cq2VkiXZuwWlfs/wCNVZtkqpZsDElvILE7DeaV2j5dd/egfw3NIDxhTMQYqm8p5hds3bbKVFwllLP8PxaQZ2A3z7VsXL3Y2gLhXWB+EyD5NMbn0ms3ODsaXxRvacw3649BURyLs+bVzvLhOoArGN9iQeqwZHXegO3PImvFH/hogB13SzAqoEnUu0TtGZornPacI2lBJG/3nb86M5XxK8Ra7yJ81MRqG2TMb70mySeN4mcPZNvhDmabWNLyC4/iVLrA7EDB9sV1TXP+1nELxF1V4i4oDRpSQqnqFkbAyJ6xPWurqA6ci9vv/pZngj1Km+N7e2rnCygD3ZRXtsIJXT/EMeUyAfUVnlrjO7YQsq2wG8+U+8Udw/CWbPXXcHXyPoJgUm5dD6SVOncEnZpIOPT+4q8WPFACGDYpSacyncWkXuVNrYpnvCDP8g3M/wBU4ApnjeRAIWRmLDoYM+0ZqXRmFssBqjr5ihuL41dVy2SdQ1LMYJAg5HrRWyPPCX1yWKVcucAyxqBBO04+29EpyqQfFLRgDau4W1JXr50Rc48ISPyNFc9901Fc597IXhle1qJtkkiB6edE3eLIRbgETgiPxdd/Y0xxHEm5tA96HS+WQoTmQRP0/XvV61blWA1C3BKbjrjNOoz6VIWARBIAO5EYn2/tQ/LeG8eTmMe//FTAK2xlgWJyx/ICDQpHD5QhSO7BWLst2mucOtzUC6sJA66sCZJ+EAHAG9XW/wBs+GFsXdXh7zQMZIjJAHlB+lZUTbujTrbxYx9RvG3lRPDWhbQICTpLem4AI+UVkz4EErtbxRTMOa+JtFX7tZ2oRFZLdw5Xwsg8SOV1I3k1pgYI9D7Vl3KuLvXL6gSWf4hHrGB5zj3Io3iONFt0ME7KT/KDMfnVo7H8rS9xCuH7sr49SldRgiAAfWJx0okccWLAdtqUumOQ4Bw5Vs7JcgvcOztdCQ4GA0kMDI6R+hUpzHmS28viMfL/ABUjdbGKzbtFxJuXmVj4VxHzrmowcyYud9lswxNhZt2VhXtPb1ZYR51OW3tXlGrS64MHInpjrWam3ajpNTvY2+4drYI04IB/zH2o0+G1rNbLBCuyZsuwU1znjBYu96nDOw0APdCghVBwqwZ+wGd6ftdpeGOmLgl8Kv4iSY23nNA9t+K4xOGuCxZVlKNrfvDqRYMkJAJxOx+VYty++6kSWZZ6Eypn4lO4YHPrkGm8XpzMuLW80Rtsbv8Af0SksxidQX0dAB/X660H/wBStd2t3WAh6np0M+3Wsi4vtLxaOB3jNr16oxliJiBgnSPb613Cc0V/4a3Jhp0z+KIJ8jiciqjoZAtx+iHJn1wLXv7ROchbr2bBi2TJUEPb1DOu2I8BMj4eoNVfkfES+m48rBw3XpGasXFWLJ8VxEPkevyAqvcZy7MqVUAZj/H0rooNDYxH91num8TlWl7SLa3MSNOZ2GD6xP1qG5jxZtGAxMjeYIPk0U+pUoiEYUAjO3v50niuFBUgmR/fz9DQ2EA+ZL6gDRUVx3HtoGkgifcj+4GNqd4C9P8AEUxON9iN/r/eg+HXS0xqGxmMfXrRqsrAqYIMx/z02OPSmnBumgEU0Qp3l6XLzC2ioHY6QWMLBBmf8etavy3gXs8P3Uh2VYWMAmPrE1i3LeKfh2DFgYZSCwBgD3wcn7Vr3ZbtPa4lCQ+RGrpEmBP9THoNq5/q0cmlpaLaFoYGkX6qmWrgE/ze2T0j3mfrVhFm9wvBuykLcy2cqGOynqMDed6tJ4e1rZgi6gYJjOQDv86Y4kC7avWiIVk0ifMhh9mH5VmnNDiNtrBNrScNiRyVhnEcVdZizKjMTJYjc/SurR//AABw/wD77/8A0/3Xtbf6pj/gKy/hZvRZryvg3vuLdoAsdvzxG9XTknYpy5S8GtMbZdGKggtIxvjGY3oH9lXJS9xeJt3kD2yQ1lkPiRhpLBp98gGCIrXbp8+mRQOqdQdBJ4cfp/IKnHwmuFuWddteSJYWybasUYFLhxBMTqYnMnoBjf2qJs9gbt9A2ru2uEkKRgrq8TOdwM4G59N60HmXHWm/h3QGWQYPmDI+4+5pVrm6sxhhJ2E9I9aUj6lOyIUN+5TPwDdd9vRZBxHYq6HuGybj2rQzdNsrr6MbYJ8SzMEbwTUfd7NFDDFlbeHQit/1OVYoRqiFnYeW3Sqh2m7OWrdo3Dru37jCGyfVsf8Ab1PpT2N1p0jtLxXYf9pXKxXt3YVj3FWjbIDDB69PkaesJORGetTXOr6LaKkKZghW3PqD7VUbZM4JHzrdZ522kWAvF8KRuoQwg7n6Uct8YNwiek7f6M9aiAzHMkmRFSX7mXOq5IgYUdB5H+9ecKqyoc0CtRT2lXgp4TmD5AzuP5SYzFFcFddUYXPiEnO49PXOaW5kyf0PIelI4m4CGG5xvnH+oFLl2rakPVq2TL3ZM1Icg5geHvW7owAckxpg7yTtjrUQLTbwIH6zSrVkk+KIiI/PaodG0tLTwrMdpIPot7tc4sOwt27tu45BOm24YwNydJMD1PmKrnaPs9ca53lqDq+JSY+lU3spzr90Di3btktu5GQOg9ROa0flnaLh7raVuSQsktjYZid8TXMzY0mJJqhFj89FuwZTJBRKpSdn7+rFpyfWAPrNXPkHLBaQK4Gs5b38vaKK4PnVl7ZcMIADEnEBmIWZ9qqvP+3FuWSz8YJCsRj0IMwRIGPU1Djk5R8PTXqr+JFELCR+0Dnly2/7uukoyhiY8UywKkzHTaOtUrhWLYChcwOg+fpQtzi3uMzsZYmf9CScDFPWjG9bsMIgjDAsTIm1vJKVxvEEoVXwswgyOmSR6HIE+9QvAcMCWYzI2g7T6CpPmFkNbPig+f5A/Oozg+HYPMkYyQd/9U7EfId1UG2lHQBHh9j/ALO1MK6u2gfikb4ncfePrTvE8JfCLeGo2yzBdUFWK/EMY+tDDgWtXlDBkUp3qhgQQpWRM+RETVmtFXe6s2PukXbrvebu5hTHyGP7GpUM2kqwwfMH86hCokGSADMDr5knzNWWxcGCB4d8+Xp51WahVIctKF43h9KzMiZ+Xl60zwyg/Cd9xPnkx+Xzqw8RbDqVIkeg/uDUTc5eVIIMKMHzA6+XnXmSgtorzDYpK4zhrl+6lsAlm2VV3x98CtK7G8msi0Lb2Gt3lIOrxKHK5UkEwWHtVc7JcFbuXSh4gpxCEMkAZEAjSfPOVrV7ZJUSZYbyIk9aw+rZjmARDb6j8C08OFx8xS3ZSpJx59Mgf8VW250kRMkEz5bmM1H9pudMzNaU+BMMw3Y+U/Iiq/YsO+Z0jaP81nwYQ0apDytXUGBXVeMQ57wZrqo9y24JHl5V1G+CZ6qfECkv2U84ZLX7s1p3AYlXQTpDRIbyE53q7c/4w2rLuNwMSOvSqp+zvtB8HBizBCsxcdYz4hEznf0q1c/4U3bT2wckYjaelC6hXxlubQJvnn3SmI64wbtZsbt24SQ0n/mfzpBvOhz8664zKWX4WBg+hrmvkiXNate2yuXvDqVw7J88LfwmY/0n+x/X5VbSxAkb/es07IWGN9Cs48RjoK0xjCkmIAk4+u1YPUI2smGjujE2N1889uVuDinV2UnUSFVgxUE4Dlca4iR7VEWeCudF3860Xt7zDhrjo1lrbETq02tPl+OAW9qrdu25WVUkbao8I9ztXZQZB8FttrbuufmcQ8tYo+zwxtJrIBcTAn/W9DJzC650rA84GfmT1rSuW9iA68QhYG/aZAqnCwZIPqHGx9Kfu9iSeDW5bTRxALa1fqAxGw64B9ZoJ6lA007mwPrv9FIgkIsi1m7XriKBqPmesefypfBXVKXDEGJjyg9PQg/atCbsL3TWFdy7Xm03CoEJiYEjIwfpUJwfZVrnFvw5ADKHDMBggCVn0Jj61Lc2F4NH3+6r4T2mnNVZ4W8QBrUCRvP0EdTThjzJ9hR1nlbie98IBwIgiOn1n6U1x1vQklgq/QkzJH686JrY51NSzquk7wl2FMAg+cVyXScE7+nyqC47mJICp4RvPU/6r3gOOd2yf7VYwGrVxGQLVgv8WQGCvhhDAdRMwR1E0DxBUpmfT39PKmbiiTc/EcQDvQpuFh4h7R0/3UMjrgqdyOVyyCCrGR0P5UWeNEkRJzHTpgfnQgKxIB+tXv8AZ9ymxxaMl1Sl6y63UdTkqYwwMyAVyP6q9PIyNhkeNgjRReI6lM9k+zjXBau3kRWTRcQgAq6mGkEdRjB86l+0fYuxe13bS6L2SQuFdt8joT5iKsptgCFhQNgBAHyFB3eN0nxR6/r2rjndQnfLqYa9lrx4bA3TSF4bs9ZHDWuHIlUKv7vq1N9SSPY0rnfZuxxN61evCe7UqV6OpIIDegM49Ypi3z21JUuMH7T/AJo+zxobYiqGbJY7XZHP35R/h21VLJO0PY29ZXvdPhhnYAfAmsKs9JMjAquDj2XrPy/Kvod01qVOARHT6weo3rCO1nJk4biDYVmfQo1MQMkgN4QNgAQM5xXR9Lz/AIoFknI/pZOXihm44Q9vm7H9f2pzieNgK2WVpiBtG4PrNQ9rBijbahrbr5FWHvsfzH0rTMbQeEiGgFaN2DsJdUa+CSAcXNChif6tW8eYrRL2FMDYYArP/wBm/GXBbILAp/Mz6jjGB8UelX6xdFwSNhifM1yHVS74j2H7rdxfkCyS6SfiBB7w6p3nV1/XSjkZh1+dWntH2ZW4WuKYJ3HScZx1xQXCdkSsNduFlBBKjGOuf8U78ZC9gJNeyO9mrlV/uXfxAGDtgmurTLPDhQFUKFG0RtXUr+pN/wCKtpasP5D2ku8K7XBBd10LO4kjYefvW18EPAuSTAkncnrNfM9xWBls/Orzwn7SroKh0UW0SFROrRC6ifwjNbnVOmOyA0xVff8AwszDmEYorUea9nrV/wARENtqG8VE2uw6Bs3CR5RQ/Znt/ZvITdZLTgfCzY6ZBPTJ+lSHFdueFRVbvVOsah7DzjYmcA+RrC8LPiPhgH+1oeKzm1M8HytLVuLYyBIPUmOpofh+0th7etLqgj4lOCPMEb/Sqtzb9oXcX07sLds3EW4G1QYaQR6MrKZBqgX7mp2cDDMxA9CSY+9MwdKkk80+3BH+QUnkZgZ8u6I5gzX71xtI/iOSFQQB0EDPv860D9mLSl+zctuq6gV1odLqBpY5ESSNvI1Q+z11xxFsoGJVgQEHigHOnByR6VuiXiyhoYSJhhBHuD1pjq2QY4hFXPB9KQMKPW4vKb7pVyFAgBcfyjYewk/U0DxPObayCfefvXc44w27bNGw/wCKza5fe+5djAPTasfExTOC552WudLRurq3aa0XWSCJx6H/AINTdni7W6xL5xueknz2rNe4QDpXvL+YNYfw/CenTFNvwGub5Cf9obJGSHZXrmnILXEXO9dioCwYgbEmZO29Y929PDm/o4a4zqiwxJBXVOdJAEjzNbhwF8OgMYI2j+xqpdvrlgWLge1atqwI1whus34VtKJjO7EiBOKJ0jKc2bQ6z2HG3+0rkYrBbgN1irJXnDXCGBXzFK6ZpNq0RkjHQ12CzUff4iTI26frzpDXcyKEtqxgCR61JCwpYn1wPIdKE4BoQjTV5YywZU16TJkYwRho6Haa3XkPJ+GC271uwtm4VBhWMrIyphoIrK+QXAt63DBROWJKj5kbCa2eww0icmN95+1c71rJdpDW7LR6fTrK9426EUv5VnPOuZPceQYJO07AbVcu1SjuG6HGAM1nHDjxMTvPl0pHpsLdJf3Wo5xA2TicKfMzUhyTmL2biqWJRjHt6j2qOHFkYAwetcoZ3RBuSB9/19K0nM1Ah3CWimcXbrWuFgiQZrJv2gciazfN096yMZN1lGW8gVMbdCAa07hVgDUoHqDFRnbG654e4tvirVttJ1W7pSHXrlpYHyI61ldMldFkU3g7fnKnMj1sWM/uYjVmeleWbenV5EZPkAZP2FLs3NSq3mP0KXavaTIz0mf1511tu4K54OIO6c4e8bdxXuLIXItzGOmqOvpWq8N2y4RbdtBdUHGoANjzA8Ikk4rHXYmQ2c9c5nekkZmlcrCjyK19vRNw5JjX0FxfMUSwty4YDlQPVmYAAfWlnj0F1LJMO9s3F9QCAw9xIP1rFeL7WvcvWDxHitWBqS2oiXAwW8yWA+U1Dcd2p4h71u/3hV7ShbZH4QBHXcnJM7zWczoGobn1/b2/7Wh8WKsK/c97X37HEXbNtvAjECvKy67xbsxZvEWJJJ3JJkz869rVb0uMACkDx3J/ikIUgxj8/lUe1SHNWXVChgB/MQT9sfIUJbtTk1oNNCylG+UbrxEk0XYUDeuQACPrSlgfnVS61UvtMcUkGVBING2yVAG3pTJuBdyZI+g6fWkfvcCPpUOBIAXjZCvn7Mb3FtfYWAndgDvGcSAJxkZ1egPnWwdMkT1xH2mvmnlXGXLclHdPMqxE/Qit07H8ztXrK6L1y64A1m4CCG6jaB9TXM9exHbSDj2H9laWG8VoTvaVS9pkUSY/UCs7sNA07EYrXDbnA+Zqvc47N2rlwBRpYgksPlGNvP6VnYOWxjSx3Cfe0OFKhpaackxT1i2bt23bXORJqzjsUNZU3W04Ow67+21THLuSWrOpVXpmdyPfefWnpM6IDymyqRQBnCkeAtjQokGABio3tjw1n91uG+YSMkEKx6hQxUxJgRRQ0gsoaLgAZhtqU4DfUQT51n/bLtbeUX+DuLauow8LiQVByJEkFliksHFklnDmnggnsa9lSeVobus1uaSzFQVWcKTPsCetcjTv1P36D0FeTO21I4i5iB867kLE5KkbbKQIGPKnrbgdPyP51E2b8QfPejxcBgDc9KC9hBQXsIKleW8VaW4puhmQHxKsAx6GcVrfJ+0fD3Rbt2CQThU0ERAn22BM1iVq6MkDYx86tPY3ntvhnNxlZmaRgfCu50j8TGB7CsvqGEJmXRscBN4kxjdp9VsF3hgVKnMiGNZ5zXs1dV2uWRqXMKdyB1n9bUZyvt0OL4m3w1lCEaS9xtyoEkBekxuautvSWZZEgDHkDIH/APJ+lc+BPgmnjci69ltNe1/CzK1yTiX2tR6kgf3qxdm+zfduWutN0bRsPtnH5mrPb4lO9NqfEFDR6Ekf2pjm1wWl73onxf8Ab1q0mdNJ5AKvhSA0botbsHQ+D0PQ1m37WeN0OlprNu4NOtWIOpem4jwzmAcxnapX9oHPb1kWLtkjunHxxqBb+U+QjM+9UbtD2pu8Xat27iIXQki4uDHkRt6/Kn+lYMjJGznjfvuEnk5DaLe6geVv4CPImPp+dEXFgUCOI0ExsGJPqSAI/Oi0fUAwG9dHI3e1iyNo2uunPQSaRcvKME9Nh9q7i1OBME/nSOFsAgswzt9KgAVZXgNrKC4pWYzBjp7UIal+I4eJI3qMvE9RmmGOsbJhjrCbrq8rqur2UW3jJgR/YUTpEQDtSbWWjoZH1/3XjZ9KEUFxtKYn0rkGfbf1pCodicU0187A77n8hUBqgApfG3JaPKmbZWYYkDzAn86QUn36iiLNofF9BV9mhE+UJVlNJ3DDzG3zHSrf2e7T8Rw4FtHm3EhCMAnfODM1WOGtyZOwovvM+npvS04bINLhap4xabbytp5H2otXLHeMQhX/ANScQ3ksmW6fWieXc3tXLiw0NcTWFOGCYjUOkyfpWIW+MYEFcR+I/rJo/hb5Q94hYXCMtqJPUdTjHSsOTo0XmINXwnG55AGoLbLXH22uXVDCbUBvSRq+2ai+Z88S1d4e4xi3c123n8J8JUnyhvzrJbXNLqC6dZm6CH66sz9f80Lb4pyhtliRq1iTME4aM9RH0FVi6M1riSduPt/tWPULGy0TtfzRHDqlwW79mShkab1lgDpB2MiDH9NZJfvajJ6/rapDjL5gKSTiB6D0+dRLW62sPHbCzSEtJN4hsr1ROBTqcOM11oHzp3xCmXH0QHOrhBXk04+lKtsrb4P2p/iRK5EEZoOiA2EQHUE/AX8Q+VNvfOoEE42PrTnDcHqEmlcRwcCRUBzQaXg5oNKU5DzU2b630AkZI6TkN8iD96u3Ju2ekcRcu6u9ulQoAwFAMQT0ExWf8Oui0MeK5LZ6KML9TqPyFOi7gHAjelMnGZKTqHsriZ7D5VZ+I7U3W4kcT+ICAo20dV/M+5p/nPbm7d722o/h3APi3WAuqI6Ej71V8HM0wTPvQRixWCW8bBUGTJRFo6/xt02u51t3ROrRPh1eYHTeo68oAzTjMdJjehkTU6h3xIn0AydvSmo2oYJdyUjmNiHKjAESSYzAn70ZwbQigGYwY/zQN8hne4/UkhRuZOPYetL4PiSW0mAOgHT0oz2ksVpG21E3lk+32pKXMlSCp98U/ceFIG8j+9MXVldXUYPqP9flQW7hBCXcJ8/pQfF252Gadt3K7f8AvVm+UqwJBUXXUu5bgmuppNohtxRNyurqAUsUzc3NCLXV1WaiRqy8ZYXuVbSs6RmBO3nUNa2HtXV1UPCiThFJsK5uldXUPulxynbuy+wou1/aurqFIvP4SeJ6UPb+P5V1dUM4VW8IXjvjNDD+1dXUy35QmBwn7W1FGurqG/lAfyguYUzb2rq6jM+VMM+VSVrYe1LfeurqWPKAPmTF/wCL/wCH9zTPQ11dTCL3TvCfAKdG/wAq6uoR5KqeV1/Y/OgTs3/bXV1EiUsTN7Zfb+9M11dRxwmBwpuzsPauT/P5V1dSiU7oBdqdO4rq6iFWchuI+I11dXUQIi//2Q=="), closeSoftKeyboard());

        ViewInteraction materialButton2 = onView(
                allOf(withId(R.id.submitPhotoButton), withText("Load"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                1),
                        isDisplayed()));
        materialButton2.perform(click());
    }

    private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");
                parentMatcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches(parent)
                        && view.equals(((ViewGroup) parent).getChildAt(position));
            }
        };
    }
}
